# e-SimFT

./: .gitignore  Dockerfile  README.md  aug_pref_data.py  aug_test_data.py  demo_bb.py  eval_simft_nr.py  eval_simft_or.py  eval_simft_price.py  gen_pref_data.py  gen_ric_data.py  gen_sft_data_nr.py  gen_sft_data_pos.py  gen_sft_data_speed.py  pareto_eval.py  pareto_exp.py  prepare_pareto_samples.py  prepare_simft_data.py  pyproject.toml  soup.py  speed_eval.txt
dataset_gen/: generate_feasible_sequences.py  parallel.sh  parallel_generating.py
dsl/: language.json
scripts/datagen/: aug_data.py  gen_pref_data.py  gen_ric_data.py  gen_sft_data_new_req.py  gen_sft_data_original_req.py  prepare_esimft_data.py  prepare_pareto_problems.py  prepare_pareto_samples.py  prepare_simft_data.py
scripts/eval/: create_soups.py  eval_baseline_nr.py  eval_simft.py  eval_simft_nr.py  eval_simft_or.py  eval_simft_price.py  find_best_PO.sh  pareto_eval.py  pareto_exp.py
scripts/generate_data/: aug_pareto_data.py  aug_pref_data.py  gen_pref_data.py  gen_ric_data.py  gen_sft_data_new_req.py  gen_sft_data_original_req.py  prepare_pareto_problems.py  prepare_simft_data.py
scripts/train/: train_dpo.py  train_ppo.py  train_ric.py  train_sft.py
simulator/: README.md  create_data_csv.py  evaluating_with_simulator.py  gear_system.py  sim_rm_dataset.py
src/esimft/model/: dpo.py  (+10 more)
train_models/: demo.py  evaluation.py  evaluation_random.py  gen_eval.sh  load_model.py  ppo_price.py  requirements.txt  sft.py  train.py  train_dpo.py  train_ppo.py  train_sft.py  train_sft_nr.py  transformers.py
(+41 files in other folders)
